Fix All panel layout problems except RSA

--- a/Resources/Search/Search.html
+++ b/Resources/Search/Search.html
@@ -82,6 +82,8 @@
 	<div>
 		<a href="https://buuoj.cn/"
 			style="color: azure; width: 100%;font-size: 24px;height: 40px;display: block;line-height: 60px;text-align: center;">BUU-CTF</a>
+		<a href="https://www.jarvisoj.com/"
+			style="color: azure; width: 100%;font-size: 24px;height: 40px;display: block;line-height: 60px;text-align: center;">Jarvis OJ</a>
 	</div>
 </body>
 
