完成节点编辑器 拖拽 计算等功能, 并修复一些已知bug

--- a/CyberChef/CyberChef.html
+++ b/CyberChef/CyberChef.html
@@ -664,10 +664,10 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
                 </div>
-                <a href="https://github.com/gchq/CyberChef"><img aria-hidden="true"
-                                                             style="position:absolute;top:0;right:0;border:0"
-                                                             src="images/fork_me.png"
-                                                             alt="Fork me on GitHub"></a>
+                <a href="https://github.com/Reverier-Xu/ICTFE"><img aria-hidden="true"
+                                                             style="position:absolute;top:-30px;right:20px;border:0"
+                                                             src="images/ICTFE.png"
+                                                             alt="ICTFE"></a>
         </div>
     </div>
 </div>
